src/main/metadata/objects/Referral__c.object
<CustomObject>
    <description>Sarath - Object added to capture referrals sent by MB employees about possible leads via digital app. BBQ app.</description>
    <fields>
        <fullName>Address_Kanji_Katakana__c</fullName>
        <label>Address (Kanji/Katakana)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the referral</description>
        <inlineHelpText>Enter Address if you know</inlineHelpText>
        <label>Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
			<picklistValues>
                <fullName>Private Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
	<fields>
        <fullName>Dealer_Email_address__c</fullName>
        <label>Dealer Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Name of the dealer</description>
        <label>Dealer</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of the referred person</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <description>used to display employee name from the email template</description>
        <formula>ReferredEmployee__r.First_Name__c + '  '+ ReferredEmployee__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Native__c</fullName>
        <label>First Name Native</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the referred prospect</description>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name_Katakana__c</fullName>
        <label>First name (Katakana)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_explained_the_scheme_confirmed_data_p__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to capture consent</description>
        <inlineHelpText>I explained the scheme, confirmed data protection and he/she is not an antisocial force</inlineHelpText>
        <label>I explained the scheme, confirmed data p</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Native__c</fullName>
        <label>Last Name Native</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the referred prospect</description>
        <label>Last Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_name_Katakana__c</fullName>
        <label>Last name (Katakana)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>Status of the lead created by the callcenter</description>
        <formula>text( Lead__r.Dealer_Lead_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead field created by the callcenter is associated here</description>
        <label>Lead</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>Referral</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Market of the user creating the record</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Type__c</fullName>
        <description>Model type that the customer is interested in buying</description>
        <label>Model Type</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLE-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLR-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VANEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart fortwo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart forfour</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number to contact the referral</description>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ReferredEmployee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Referring Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Referral</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the referral</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Vehicle__c</fullName>
        <label>Type of Vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <description>Zip code for the address of the referral</description>
        <label>Zip code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Market__c</columns>
        <columns>Model_Type__c</columns>
        <columns>ReferredEmployee__c</columns>
        <columns>Status__c</columns>
        <columns>Type_of_Vehicle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Referrals</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Lead_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Referrals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>